    doesn't change to the directory in which the specified file lives.
    
  - Support changing directories locally with SConscript directory
    path names relative to any SConstruct file specified with -f.
    This allows you to build in another directory by simply changing
    there and pointing at the SConstruct file in another directory.

  From Lachlan O'Dea:

  - Add SharedObject() support to the masm tool.

  - Fix WhereIs() to return normalized paths.



RELEASE 0.11 - Tue, 11 Feb 2003 05:24:33 -0600

  From Chad Austin:

  - Add support for IRIX and the SGI MIPSPro tool chain.

  - Support using the MSVC tool chain when running Cygwin Python.

  From Michael Cook:

  - Avoid losing signal bits in the exit status from a command,
    helping terminate builds on interrupt (CTRL+C).

  From Charles Crain:

  - Added new AddPreAction() and AddPostAction() functions that support
    taking additional actions before or after building specific targets.

  - Add support for the PharLap ETS tool chain.

  From Steven Knight:

  - Allow Python function Actions to specify a list of construction
    variables that should be included in the Action's signature.

  - Allow libraries in the LIBS variable to explicitly include the prefix
    and suffix, even when using the GNU linker.
    (Bug reported by Neal Becker.)

  - Use DOS-standard CR-LF line endings in the scons.bat file.
    (Bug reported by Gary Ruben.)

  - Doc changes:  Eliminate description of deprecated "name" keyword
    argument from Builder definition (reported by Gary Ruben).

  - Support using env.Append() on BUILDERS (and other dictionaries).
    (Bug reported by Bj=F6rn Bylander.)

  - Setting the BUILDERS construction variable now properly clears
    the previous Builder attributes from the construction Environment.
    (Bug reported by Bj=F6rn Bylander.)

  - Fix adding a prefix to a file when the target isn't specified.
    (Bug reported by Esa Ilari Vuokko.)
